<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_post_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/text_post_Edit_Text"
        tools:ignore="Autofill"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="49dp"
        android:gravity="top|start"
        android:hint="@string/testo_post"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:textColor="@color/colorGeneralText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/link_Edit_Text"
        tools:ignore="Autofill"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="49dp"
        android:hint="@string/link"
        android:inputType="text"
        android:textColor="@color/colorGeneralText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_post_Edit_Text"
        app:layout_constraintVertical_bias="0.032" />

    <ImageButton
        android:id="@+id/pdfButton"
        android:layout_width="68dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/colorBackground"
        android:foregroundTint="@color/colorButton"
        android:onClick="selectPdf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_Edit_Text"
        app:layout_constraintVertical_bias="0.152"
        app:srcCompat="@drawable/pdf_icon_foreground"
        android:contentDescription="@string/desc_pdf" />

    <ImageButton
        android:id="@+id/uploadButton"
        android:layout_width="72dp"
        android:layout_height="65dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/colorBackground"
        android:onClick="upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tags_spinner"
        app:srcCompat="@drawable/upload_icon_foreground"
        android:contentDescription="@string/desc_upload" />

    <Spinner
        android:id="@+id/tags_spinner"
        android:layout_width="282dp"
        android:layout_height="37dp"
        android:foregroundTint="@color/colorButton"
        android:prompt="@string/spinner_tag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pdfButton"
        app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:id="@+id/uri_pdf"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:maxLines="3"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/pdfButton"
        app:layout_constraintTop_toBottomOf="@+id/link_Edit_Text"
        app:layout_constraintVertical_bias="0.185" />

</androidx.constraintlayout.widget.ConstraintLayout>