...
    <string name="Password_text">Password</string>
    <string name="Login_text">LOGIN</string>
    <string name="Create_New_Account_Text">Non hai ancora un account? Creane uno</string>
    <string name="Insert_correct_data">Perfavore, inserisci i dati corretti</string>
    <string name="Try_Again">Perfavore, riprova</string>
    <string name="Login_Failed">Login fallito</string>
    <string name="Dialog_neutral_button_login_failed">OK</string>
    <string name="Login_Successful">Login eseguito con successo!</string>
    <string name="desc_unisannio">Logo Unisannio</string>
    <string name="desc_kasteca">Logo app</string>

    <!-- stringhe per la RegistrationActivity -->
    <string name="Registration_Failed">Registrazione fallita</string>
...
    <!-- stringhe per la NewPostActivity -->
    <string name="testo_post">Scrivi qualcosa</string>
    <string name="link">Link</string>
    <string name="spinner_tag">Tag</string>
    <string name="upload_failed">Upload fallito</string>
    <string name="missing_data">Perfavore, inserisci i dati mancanti.</string>
    <string name="upload_pdf_fallito">Non è stato possibile caricare il pdf. Il post non è stato caricato</string>
    <string name="upload_pdf_successo">Il pdf è stato caricato.</string>
    <string name="upload_successo">Il post è stato caricato.</string>
    <string name="desc_pdf">Icona pdf</string>
    <string name="desc_upload">Icona upload</string>

    <!-- stringhe per il PostDocenteFragment-->
    <string name="get_failed">Fallimento recupero dati</string>

...
    <string name="get_docente_failed">Non è stato possibile recuperare il docente del corso.</string>

    <!-- stringhe per il PostActivity-->
    <string name="Numero_commenti">Commenti</string>
    <string name="no_activity">Nessun Web Browser trovato</string>
    <string name="download_webBrowser">Per favore, scarica un web browser.</string>
    <string name="upload_post_error">Errore nel caricamento del nuovo post.</string>
    <string name="aggiungi_commento">Commenta</string>
    <string name="formato_data">dd/MM/yyyy HH:mm</string>
    <string name="titolo">File Download</string>
    <string name="modifica_button">Modifica</string>
    <string name="desc_invio">Icona invio</string>
    <string name="desc_indietro">icona indietro</string>
...
